# sensor-net

./: .gitignore  CMakeLists.txt  readme.md
client-app/: CMakeLists.txt  Client.cpp  ClientService.cpp  ClientService.hpp  main.cpp
cmake/: CMakeCache.txt
cmake/Client/: CMakeLists.txt
include/: ClientInterface.hpp  Measurement.hpp  PlatformInterface.hpp  lib.hpp
platform-app/: CMakeLists.txt  Measurement.cpp  Platform.cpp  PlatformService.cpp  PlatformService.hpp  main.cpp
sensor-app/: CMakeLists.txt  Sensor.cpp
test/: test.cpp
